the_project/manifests/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app-app
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
