the_project/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-postgres-set
  namespace: project
spec:
  selector:
    matchLabels:
      app: todo-postgres
  serviceName: todo-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres-svc
  namespace: project
spec:
  selector:
    app: todo-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
